--- a/pages/games.html
+++ b/pages/games.html
@@ -19,8 +19,9 @@
     </header>
     
     <main>
-        <h2></h2>
-        <p></p>
+        <h2>My Favorite Halloween Game!</h2>
+        <p>Halloween potato sack race! have you ever raced in a potato sack or even better watch somebody trip while trying to pass everyone else! well this is the game for you. its nastalgic and so much fun to watch or compete in. All youll need for this game is a start and finnish line, and some king-sized pillow cases.</p>
+        <img src="../images/potato sack races.jpg" alt="potato sack">
     </main>
     
     <footer>
