--- a/pages/scaryMovies.html
+++ b/pages/scaryMovies.html
@@ -19,8 +19,16 @@
     </header>
     
     <main>
-        <h2></h2>
-        <p></p>
+        <h2>The scariest movies in 2024!</h2>
+        <p>These are my top 3 horror movies that came out in 2024 watchlist. rated and viewed from people all over the world and each with thrilling and terifying moments that keep you on your seat!</p>
+        <ol>
+            <li>Smile2</li>
+            <li>Dont Move</li>
+            <li>Hold Your breath</li>
+        </ol>
+        <img src="../images/smile2.jpg" alt="smile2">
+        <img src="../images/dont move.jpg" alt="Dont move">
+        <img src="../images/Hold your breath.jpg" alt="hold your breath">
     </main>
     
     <footer>
