--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
                 <li><a href="pages/scaryMovies.html">Scary Movies</a></li>
                 <li><a href="pages/recipes.html">Recipes</a></li>
                 <li><a href="pages/games.html">Games</a></li>
+
             </ul>
         </nav>
     </header>
     
     <main>
-        <h2></h2>
-        <p></p>
+        <h2>>Welcome to Halloween Haven!</h2>
+        <p>Wishing you a Spooktacular Halloween!</p>
+        <img src="images/happy halloween.jpg" alt="Halloween Decorations">
+        <p>Explore My site for fun recipes, scary movies, and spooky halloween Games!</p>
     </main>
     
     <footer>
